# TDL

./: .COMMIT_MSG  .gitignore  .mcp.json  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  README.md  _sm_log.txt  ari_analysis_output.txt  barrier_all_outcomes.txt  barrier_correlation_output.txt  barrier_output.txt  barrier_results.txt  checks.json  cohort_shuffle_log.txt  fix_percent.py  integrated_model_all_outcomes.txt  integrated_model_complete.txt  integrated_model_extended.txt  integrated_model_output.txt  label_shuffle_log.txt  mapper_typology_output.txt  markov2_log.txt  missing_nulls_log.txt  multi_outcome_barrier.txt  null_rerun_log.txt  package-lock.json  package.json  persistence_all_outcomes.txt  persistence_extended.txt  persistence_h0_h1_output.txt  persistence_sensitivity_output.txt  persistence_structure_output.txt  pyproject.toml  test_output.txt  test_realtime.py
.apm/: Implementation_Plan.md  metadata.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.codacy/: cli.sh  codacy.yaml
.githooks/: commit-msg  prepare-commit-msg
.github/: copilot-instructions.md
.vexp/: .gitignore  daemon.pipe  manifest.json
docs/: CROSS_SYSTEM_METRICS_FRAMEWORK.md  DEFERRED_WORK_INVENTORY.md  EXPERIMENTAL_METHODOLOGY_CHECKLIST.md  METHODOLOGY_ALIGNMENT.md  PHASE_8_IMPLEMENTATION_PLAN.md  TASK_6_5_1_HANDOFF.md  TASK_6_5_2_COMPLETE.md  TASK_6_5_2_HANDOFF.md  TTK_DISTANCE_METRICS.md  TTK_ENHANCED_INTEGRATION.md  TTK_FILTER_VERIFICATION.md  TTK_SETUP.md  VALIDATION_SUMMARY_COMPLETE.md  vault-engine-usage.md
financial_tda/: README.md  __init__.py  paper_compilation_summary.md  paper_compile.py  paper_draft_methodology.md
outputs/: international_vals_2008.txt  international_vals_2023_2025.txt
papers/: README.md
poverty_tda/: README.md  __init__.py  figures_specification.md  supplementary_outline.md
(+963 files in other folders)
